Added style to page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carlo Eusebi">
-    <title>Documento</title>
+    <title>Trenitalia</title>
+    <!-- bootstrap -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css'
+        integrity='sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=='
+        crossorigin='anonymous' />
     <!-- font awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'
         integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=='
@@ -20,7 +24,18 @@
 <body>
 
     <!-- Exercise made by
-    CARLO EUSEBI -->
+        CARLO EUSEBI -->
+    <header class="container-fluid d-flex justify-content-between align-items-center ">
+        <img src="https://www.lefrecce.it/Channels.Website.WEB/web/images/logo-trenitalia-it.svg" alt="logo">
+    </header>
+
+    <main class="container-fluid d-flex justify-content-center align-items-center vh-100">
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text">Number of passengers: 1</p>
+            </div>
+        </div>
+    </main>
 
 </body>
 
