--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="d-flex justify-content-between">
                     <span>Ticekt Price:</span>
-                    <span id="ticket-price"></span>
+                    <span id="ticket-price" class="fw-bold"></span>
                 </div>
                 <div id="discounts" class="d-flex justify-content-between"></div>
                 <button type="button" class="btn btn-success mt-3">Buy Tickets</button>
